--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ TF_VAR_project = ${TF_VAR_project}
 
 TF_VAR_owner_email=${TF_VAR_owner_email}
 
+TF_VAR_s3_bucket_name = ${TF_VAR_s3_bucket_name}
+TF_VAR_s3_bucket_key_prefix = ${TF_VAR_s3_bucket_key_prefix}
+
 TF_VAR_dynamodb_lock_table_name = ${TF_VAR_dynamodb_lock_table_name}
 
 TF_VAR_codepipeline_artifacts_s3_bucket_name = ${TF_VAR_codepipeline_artifacts_s3_bucket_name}
