feat: add application pipeline, update admin code to manage application resources

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ TF_VAR_env=${TF_VAR_env}
 TF_VAR_project = ${TF_VAR_project}
 
 TF_VAR_infra_approver_email=${TF_VAR_infra_approver_email}
+TF_VAR_app_approver_email=${TF_VAR_app_approver_email}
 
 TF_VAR_s3_bucket_name = ${TF_VAR_s3_bucket_name}
 TF_VAR_s3_bucket_key_prefix = ${TF_VAR_s3_bucket_key_prefix}
@@ -17,3 +18,4 @@ TF_VAR_codepipeline_artifacts_s3_bucket_name = ${TF_VAR_codepipeline_artifacts_s
 TF_VAR_codepipeline_artifacts_s3_bucket_kms_key_alias = ${TF_VAR_codepipeline_artifacts_s3_bucket_kms_key_alias}
 
 TF_VAR_codecommit_infra_repo_default_branch_name = ${TF_VAR_codecommit_infra_repo_default_branch_name}
+TF_VAR_codecommit_app_repo_default_branch_name = ${TF_VAR_codecommit_app_repo_default_branch_name}
