chore: update admin code to manage infra and app resources, expose infra codebuild env vars to infra terraform project, tidy up variable names

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
 
 TF_VAR_env=${TF_VAR_env}
-TF_VAR_project = ${TF_VAR_project}
+TF_VAR_project_name = ${TF_VAR_project_name}
 
 TF_VAR_infra_approver_email=${TF_VAR_infra_approver_email}
 TF_VAR_app_approver_email=${TF_VAR_app_approver_email}
